Bug 395606 - Appimage: ImportError: No module named 'encodings'
Summary: Appimage: ImportError: No module named 'encodings'
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0.4
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-19 12:47 UTC by galileo.sartor
Modified: 2018-06-26 15:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description galileo.sartor 2018-06-19 12:47:02 UTC
System: Ubuntu Mate 18.04 x86_64

In IRC I spoke with Wolthera_laptop, who suggested to open the bug.
If I can help somehow let me know.

Running the latest Appimage I get the following error:
Could not find platform independent libraries <prefix>
Could not find platform dependent libraries <exec_prefix>
Consider setting $PYTHONHOME to <prefix>[:<exec_prefix>]
Fatal Python error: Py_Initialize: Unable to get the locale encoding
ImportError: No module named 'encodings'

Current thread 0x00007f8219052bc0 (most recent call first):
Aborted (core dumped)
Comment 1 Halla Rempt 2018-06-19 13:01:19 UTC
I see the same messages, but weirdly enough the scripts we package with Python still work. I suspect

commit 8b59bf27b4af54203dd4e0caaec9d81c9957d8a9
Author: Pino Toscano <pino@kde.org>
Date:   Tue May 29 10:44:40 2018 +0200

    Fix loading of the Python library
Comment 2 Halla Rempt 2018-06-19 13:12:34 UTC
To be clear: I don't get an abort, the appimage runs fine on Ubuntu 18.04.
Comment 3 Halla Rempt 2018-06-19 13:19:46 UTC
Could you attach your environment? (set | grep -i python) ?
Comment 4 galileo.sartor 2018-06-19 13:54:53 UTC
that command doesn't return anything..
Comment 5 galileo.sartor 2018-06-19 14:04:06 UTC
Before it fails it does set:
Setting python paths: "/home/galileo/.local/share/krita/:/tmp/.mount_runtimodKolt/usr/share/krita/:/home/galileo/.local/share/krita/pykrita/:/tmp/.mount_runtimodKolt/usr/share/krita/pykrita/:/tmp/.mount_runtimodKolt/usr/share/pykrita/:/tmp/.mount_runtimodKolt/usr/lib/krita-python-libs:/tmp/.mount_runtimodKolt/usr/lib/sip"

so it's ignoring the python3.5 folder...
As far as I can tell it can't see most of the python libraries then
Comment 6 Halla Rempt 2018-06-19 14:37:35 UTC
Git commit ef9c27b5ad4d2ab18b173842bede1cc5d7464d89 by Boudewijn Rempt.
Committed on 19/06/2018 at 14:36.
Pushed by rempt into branch 'krita/4.1'.

Fix setting the python environment

With linuxdeployqt, apparently something changed in the way
the mount point is created. Do a case-insensitive comparison
to make sure.

M  +1    -1    plugins/extensions/pykrita/plugin/utilities.cpp

https://commits.kde.org/krita/ef9c27b5ad4d2ab18b173842bede1cc5d7464d89
Comment 7 Halla Rempt 2018-06-19 14:37:45 UTC
Git commit 90e6bb44e3791fe6c7cd58de22c1cbd46562c303 by Boudewijn Rempt.
Committed on 19/06/2018 at 14:37.
Pushed by rempt into branch 'master'.

Fix setting the python environment

With linuxdeployqt, apparently something changed in the way
the mount point is created. Do a case-insensitive comparison
to make sure.
(cherry picked from commit ef9c27b5ad4d2ab18b173842bede1cc5d7464d89)

M  +1    -1    plugins/extensions/pykrita/plugin/utilities.cpp

https://commits.kde.org/krita/90e6bb44e3791fe6c7cd58de22c1cbd46562c303
Comment 8 Halla Rempt 2018-06-19 14:41:30 UTC
Yes, ignorning the system python folders is intentional, because the appimage packs its own python. But I think I've fixed it and I've started a new nightly build to test: https://binary-factory.kde.org/job/Krita_Nightly_Appimage_Build/ . Check build 128 when it's done :-)
Comment 9 galileo.sartor 2018-06-19 16:28:28 UTC
(In reply to Boudewijn Rempt from comment #8)
> Yes, ignorning the system python folders is intentional, because the
> appimage packs its own python. But I think I've fixed it and I've started a
> new nightly build to test:
> https://binary-factory.kde.org/job/Krita_Nightly_Appimage_Build/ . Check
> build 128 when it's done :-)

What I meant is it's not addind the bundled python to the list.
But I'll try it when it's done! I have the jenkins page open :)
Comment 10 galileo.sartor 2018-06-19 16:30:55 UTC
(In reply to galileo.sartor from comment #9)
> (In reply to Boudewijn Rempt from comment #8)
> > Yes, ignorning the system python folders is intentional, because the
> > appimage packs its own python. But I think I've fixed it and I've started a
> > new nightly build to test:
> > https://binary-factory.kde.org/job/Krita_Nightly_Appimage_Build/ . Check
> > build 128 when it's done :-)
> 
> What I meant is it's not addind the bundled python to the list.
> But I'll try it when it's done! I have the jenkins page open :)

Ok...128...I was looking at 129. My bad.
I guess that's why it's tagged as fixed.
Anyway I'm downloading now
Comment 11 galileo.sartor 2018-06-19 16:33:15 UTC
Nope. 128 does not fix it.
It doesn't print the python libs anymore, but the error is the same:

Could not find platform independent libraries <prefix>
Could not find platform dependent libraries <exec_prefix>
Consider setting $PYTHONHOME to <prefix>[:<exec_prefix>]
Fatal Python error: Py_Initialize: Unable to get the locale encoding
ImportError: No module named 'encodings'

Current thread 0x00007f67df9c5bc0 (most recent call first):
Aborted (core dumped)
Comment 12 Halla Rempt 2018-06-19 16:43:42 UTC
As for messages, run Krita like  "QT_LOGGING_RULES="krita.scripting=true" ./krita-4.2.0-pre-alpha-90e6bb4-x86_64.appimage"

But it looks like my change did something else, though -- when doing that I do not get the Python errors printed:

boud@sebe:~/Downloads$ QT_LOGGING_RULES="krita.scripting=true" ./krita-4.2.0-pre-alpha-90e6bb4-x86_64.appimage 
QPainter::begin: Paint device returned engine == 0, type: 3
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
krita.scripting: Loading Python plugin
krita.scripting: Initializing Python plugin for Python 3 , 5
krita.scripting: "Loaded libpython3.5m.so.1.0"
krita.scripting: Plugin Directories:  ("/home/boud/.local/share/krita/", "/tmp/.mount_krita-v5oXsX/usr/share/krita/", "/home/boud/.local/share/krita/pykrita/", "/tmp/.mount_krita-v5oXsX/usr/share/krita/pykrita/", "/tmp/.mount_krita-v5oXsX/usr/share/pykrita/")
krita.scripting: Python::setPath. Script paths: ("/home/boud/.local/share/krita/", "/tmp/.mount_krita-v5oXsX/usr/share/krita/", "/home/boud/.local/share/krita/pykrita/", "/tmp/.mount_krita-v5oXsX/usr/share/krita/pykrita/", "/tmp/.mount_krita-v5oXsX/usr/share/pykrita/") true
krita.scripting: pythonLibsPath (krita-python-libs) "/tmp/.mount_krita-v5oXsX/usr/lib/krita-python-libs"
krita.scripting: Found krita-python-libs at "/tmp/.mount_krita-v5oXsX/usr/lib/krita-python-libs"
krita.scripting: pythonLibsPath (sip) "/tmp/.mount_krita-v5oXsX/usr/lib/sip"
krita.scripting: Found sip at "/tmp/.mount_krita-v5oXsX/usr/lib/sip"
krita.scripting:         "python3.5" "python3.5"
krita.scripting: Setting python paths: "/home/boud/.local/share/krita/:/tmp/.mount_krita-v5oXsX/usr/share/krita/:/home/boud/.local/share/krita/pykrita/:/tmp/.mount_krita-v5oXsX/usr/share/krita/pykrita/:/tmp/.mount_krita-v5oXsX/usr/share/pykrita/:/tmp/.mount_krita-v5oXsX/usr/lib/krita-python-libs:/tmp/.mount_krita-v5oXsX/usr/lib/sip:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/lib-dynload:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/site-packages:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/site-packages/PyQt5:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5"


But I do get a segfault, which I didn't get at first...

Segmentation fault (core dumped)

The problem is that this is appimage specific, and the only way I can make appimages at the moment is through the build service, so it's very trial and error.
Comment 13 galileo.sartor 2018-06-19 16:45:36 UTC
(In reply to Boudewijn Rempt from comment #12)
> As for messages, run Krita like  "QT_LOGGING_RULES="krita.scripting=true"
> ./krita-4.2.0-pre-alpha-90e6bb4-x86_64.appimage"
> 
> But it looks like my change did something else, though -- when doing that I
> do not get the Python errors printed:
> 
> boud@sebe:~/Downloads$ QT_LOGGING_RULES="krita.scripting=true"
> ./krita-4.2.0-pre-alpha-90e6bb4-x86_64.appimage 
> QPainter::begin: Paint device returned engine == 0, type: 3
> QLayout: Attempting to add QLayout "" to QWidget "", which already has a
> layout
> krita.scripting: Loading Python plugin
> krita.scripting: Initializing Python plugin for Python 3 , 5
> krita.scripting: "Loaded libpython3.5m.so.1.0"
> krita.scripting: Plugin Directories:  ("/home/boud/.local/share/krita/",
> "/tmp/.mount_krita-v5oXsX/usr/share/krita/",
> "/home/boud/.local/share/krita/pykrita/",
> "/tmp/.mount_krita-v5oXsX/usr/share/krita/pykrita/",
> "/tmp/.mount_krita-v5oXsX/usr/share/pykrita/")
> krita.scripting: Python::setPath. Script paths:
> ("/home/boud/.local/share/krita/",
> "/tmp/.mount_krita-v5oXsX/usr/share/krita/",
> "/home/boud/.local/share/krita/pykrita/",
> "/tmp/.mount_krita-v5oXsX/usr/share/krita/pykrita/",
> "/tmp/.mount_krita-v5oXsX/usr/share/pykrita/") true
> krita.scripting: pythonLibsPath (krita-python-libs)
> "/tmp/.mount_krita-v5oXsX/usr/lib/krita-python-libs"
> krita.scripting: Found krita-python-libs at
> "/tmp/.mount_krita-v5oXsX/usr/lib/krita-python-libs"
> krita.scripting: pythonLibsPath (sip) "/tmp/.mount_krita-v5oXsX/usr/lib/sip"
> krita.scripting: Found sip at "/tmp/.mount_krita-v5oXsX/usr/lib/sip"
> krita.scripting:         "python3.5" "python3.5"
> krita.scripting: Setting python paths:
> "/home/boud/.local/share/krita/:/tmp/.mount_krita-v5oXsX/usr/share/krita/:/
> home/boud/.local/share/krita/pykrita/:/tmp/.mount_krita-v5oXsX/usr/share/
> krita/pykrita/:/tmp/.mount_krita-v5oXsX/usr/share/pykrita/:/tmp/.mount_krita-
> v5oXsX/usr/lib/krita-python-libs:/tmp/.mount_krita-v5oXsX/usr/lib/sip:/tmp/.
> mount_krita-v5oXsX/usr/lib/python3.5/lib-dynload:/tmp/.mount_krita-v5oXsX/
> usr/lib/python3.5/site-packages:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/
> site-packages/PyQt5:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5"
> 
> 
> But I do get a segfault, which I didn't get at first...
> 
> Segmentation fault (core dumped)
> 
> The problem is that this is appimage specific, and the only way I can make
> appimages at the moment is through the build service, so it's very trial and
> error.

QT_LOGGING_RULES="krita.scripting=true" returns it back to what it was in the released 4.0.4...with the complete log..
Comment 14 galileo.sartor 2018-06-19 17:35:10 UTC
Compare my python path:

krita.scripting: Setting python paths: "/home/galileo/.local/share/krita/:/tmp/.mount_runtimdMZ29b/usr/share/krita/:/home/galileo/.local/share/krita/pykrita/:/tmp/.mount_runtimdMZ29b/usr/share/krita/pykrita/:/tmp/.mount_runtimdMZ29b/usr/share/pykrita/:/tmp/.mount_runtimdMZ29b/usr/lib/krita-python-libs:/tmp/.mount_runtimdMZ29b/usr/lib/sip"

with yours:

krita.scripting: Setting python paths: "/home/boud/.local/share/krita/:/tmp/.mount_krita-v5oXsX/usr/share/krita/:/home/boud/.local/share/krita/pykrita/:/tmp/.mount_krita-v5oXsX/usr/share/krita/pykrita/:/tmp/.mount_krita-v5oXsX/usr/share/pykrita/:/tmp/.mount_krita-v5oXsX/usr/lib/krita-python-libs:/tmp/.mount_krita-v5oXsX/usr/lib/sip:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/lib-dynload:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/site-packages:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5/site-packages/PyQt5:/tmp/.mount_krita-v5oXsX/usr/lib/python3.5"

Something is not right, on my system it's not looking in python3.5 (in the bundle) nor any of the other folders basically
Comment 15 Halla Rempt 2018-06-19 20:18:03 UTC
I see... That is really curious...
Comment 16 Halla Rempt 2018-06-20 09:53:52 UTC
Git commit e6568f4a9a8ce26248d4e2f310911ffbc80ff3ad by Boudewijn Rempt.
Committed on 20/06/2018 at 09:53.
Pushed by rempt into branch 'master'.

Cleanup the python path setting

This puts back the old way of setting the paths. I'm not sure
whether this will give a build error with python 2; if so, it
needs to be put between ifdefs, but I'm not sure which ifdefs
are available. In any case, this block of code is only relevant
for appimages, and since we're not providing python 2.7 appimages,
the code would't be executed by 2.7 using krita builds.

CCMAIL:jhoolmans@gmail.com

M  +2    -9    plugins/extensions/pykrita/plugin/utilities.cpp

https://commits.kde.org/krita/e6568f4a9a8ce26248d4e2f310911ffbc80ff3ad
Comment 17 Halla Rempt 2018-06-20 09:54:47 UTC
Git commit 76cb4aab8d426ba78955b408ba5c5de4b9a60189 by Boudewijn Rempt.
Committed on 20/06/2018 at 09:54.
Pushed by rempt into branch 'krita/4.1'.

Cleanup the python path setting

This puts back the old way of setting the paths. I'm not sure
whether this will give a build error with python 2; if so, it
needs to be put between ifdefs, but I'm not sure which ifdefs
are available. In any case, this block of code is only relevant
for appimages, and since we're not providing python 2.7 appimages,
the code would't be executed by 2.7 using krita builds.

CCMAIL:jhoolmans@gmail.com
(cherry picked from commit e6568f4a9a8ce26248d4e2f310911ffbc80ff3ad)

M  +2    -9    plugins/extensions/pykrita/plugin/utilities.cpp

https://commits.kde.org/krita/76cb4aab8d426ba78955b408ba5c5de4b9a60189
Comment 18 galileo.sartor 2018-06-20 11:02:34 UTC
Where can I test this?
It's not in build #130
Comment 19 Halla Rempt 2018-06-20 11:41:06 UTC
In 4.1.0-beta.2: https://download.kde.org/unstable/krita/4.1.0-beta.2/
Comment 20 galileo.sartor 2018-06-20 12:40:56 UTC
...I hate to say this, but it still doesn't work.
Comment 21 Halla Rempt 2018-06-20 12:56:42 UTC
Here's my output on opensuse:

boud@linux-u0cn:~> QT_LOGGING_RULES="krita.scripting=true" ./krita-4.1.0-beta.2-x86_64.appimage 
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
krita.scripting: Loading Python plugin
krita.scripting: Initializing Python plugin for Python 3 , 5
krita.scripting: "Loaded libpython3.5m.so.1.0"
krita.scripting: Plugin Directories:  ("/home/boud/.local/share/krita/", "/tmp/.mount_krita-iR2Lyc/usr/share/krita/", "/home/boud/.local/share/krita/pykrita/", "/tmp/.mount_krita-iR2Lyc/usr/share/krita/pykrita/", "/tmp/.mount_krita-iR2Lyc/usr/share/pykrita/")
krita.scripting: Python::setPath. Script paths: ("/home/boud/.local/share/krita/", "/tmp/.mount_krita-iR2Lyc/usr/share/krita/", "/home/boud/.local/share/krita/pykrita/", "/tmp/.mount_krita-iR2Lyc/usr/share/krita/pykrita/", "/tmp/.mount_krita-iR2Lyc/usr/share/pykrita/") true
krita.scripting: pythonLibsPath (krita-python-libs) "/tmp/.mount_krita-iR2Lyc/usr/lib/krita-python-libs"
krita.scripting: Found krita-python-libs at "/tmp/.mount_krita-iR2Lyc/usr/lib/krita-python-libs"
krita.scripting: pythonLibsPath (sip) "/tmp/.mount_krita-iR2Lyc/usr/lib/sip"
krita.scripting: Found sip at "/tmp/.mount_krita-iR2Lyc/usr/lib/sip"
krita.scripting:         "python3.5" "python3.5"
krita.scripting: Setting python paths: "/home/boud/.local/share/krita/:/tmp/.mount_krita-iR2Lyc/usr/share/krita/:/home/boud/.local/share/krita/pykrita/:/tmp/.mount_krita-iR2Lyc/usr/share/krita/pykrita/:/tmp/.mount_krita-iR2Lyc/usr/share/pykrita/:/tmp/.mount_krita-iR2Lyc/usr/lib/krita-python-libs:/tmp/.mount_krita-iR2Lyc/usr/lib/sip:/tmp/.mount_krita-iR2Lyc/usr/lib/python3.5/lib-dynload:/tmp/.mount_krita-iR2Lyc/usr/lib/python3.5/site-packages:/tmp/.mount_krita-iR2Lyc/usr/lib/python3.5/site-packages/PyQt5:/tmp/.mount_krita-iR2Lyc/usr/lib/python3.5"
krita.scripting: Initializing Python interpreter
/tmp/.mount_krita-iR2Lyc/usr/lib/krita-python-libs/krita added to PYTHONPATH
krita.scripting: Loaded pykrita, now load plugins
Comment 22 galileo.sartor 2018-06-20 13:00:39 UTC
Here's my log on ubuntu mate 18.04

QT_LOGGING_RULES="krita.scripting=true" ./krita-4.1.0-beta.2-x86_64.appimage
krita.scripting: Loading Python plugin
krita.scripting: Initializing Python plugin for Python 3 , 5
krita.scripting: "Loaded libpython3.5m.so.1.0"
krita.scripting: Plugin Directories:  ("/home/galileo/.local/share/krita/", "/tmp/.mount_runtimYB8nTd/usr/share/krita/", "/home/galileo/.local/share/krita/pykrita/", "/tmp/.mount_runtimYB8nTd/usr/share/krita/pykrita/", "/tmp/.mount_runtimYB8nTd/usr/share/pykrita/")
krita.scripting: Python::setPath. Script paths: ("/home/galileo/.local/share/krita/", "/tmp/.mount_runtimYB8nTd/usr/share/krita/", "/home/galileo/.local/share/krita/pykrita/", "/tmp/.mount_runtimYB8nTd/usr/share/krita/pykrita/", "/tmp/.mount_runtimYB8nTd/usr/share/pykrita/") false
krita.scripting: pythonLibsPath (krita-python-libs) "/tmp/.mount_runtimYB8nTd/usr/lib/krita-python-libs"
krita.scripting: Found krita-python-libs at "/tmp/.mount_runtimYB8nTd/usr/lib/krita-python-libs"
krita.scripting: pythonLibsPath (sip) "/tmp/.mount_runtimYB8nTd/usr/lib/sip"
krita.scripting: Found sip at "/tmp/.mount_runtimYB8nTd/usr/lib/sip"
krita.scripting: Setting python paths: "/home/galileo/.local/share/krita/:/tmp/.mount_runtimYB8nTd/usr/share/krita/:/home/galileo/.local/share/krita/pykrita/:/tmp/.mount_runtimYB8nTd/usr/share/krita/pykrita/:/tmp/.mount_runtimYB8nTd/usr/share/pykrita/:/tmp/.mount_runtimYB8nTd/usr/lib/krita-python-libs:/tmp/.mount_runtimYB8nTd/usr/lib/sip"
krita.scripting: Initializing Python interpreter
Could not find platform independent libraries <prefix>
Could not find platform dependent libraries <exec_prefix>
Consider setting $PYTHONHOME to <prefix>[:<exec_prefix>]
Fatal Python error: Py_Initialize: Unable to get the locale encoding
ImportError: No module named 'encodings'

Current thread 0x00007fc564afdbc0 (most recent call first):
Aborted (core dumped)
Comment 23 Halla Rempt 2018-06-20 13:00:50 UTC
And this is on Kubuntu 18.04:

boud@sebe:~/Downloads$ QT_LOGGING_RULES="krita.scripting=true" ./krita-4.1.0-beta.2-x86_64.appimage 
QPainter::begin: Paint device returned engine == 0, type: 3
krita.scripting: Loading Python plugin
krita.scripting: Initializing Python plugin for Python 3 , 5
krita.scripting: "Loaded libpython3.5m.so.1.0"
krita.scripting: Plugin Directories:  ("/home/boud/.local/share/krita/", "/tmp/.mount_krita-dYxIEy/usr/share/krita/", "/home/boud/.local/share/krita/pykrita/", "/tmp/.mount_krita-dYxIEy/usr/share/krita/pykrita/", "/tmp/.mount_krita-dYxIEy/usr/share/pykrita/")
krita.scripting: Python::setPath. Script paths: ("/home/boud/.local/share/krita/", "/tmp/.mount_krita-dYxIEy/usr/share/krita/", "/home/boud/.local/share/krita/pykrita/", "/tmp/.mount_krita-dYxIEy/usr/share/krita/pykrita/", "/tmp/.mount_krita-dYxIEy/usr/share/pykrita/") true
krita.scripting: pythonLibsPath (krita-python-libs) "/tmp/.mount_krita-dYxIEy/usr/lib/krita-python-libs"
krita.scripting: Found krita-python-libs at "/tmp/.mount_krita-dYxIEy/usr/lib/krita-python-libs"
krita.scripting: pythonLibsPath (sip) "/tmp/.mount_krita-dYxIEy/usr/lib/sip"
krita.scripting: Found sip at "/tmp/.mount_krita-dYxIEy/usr/lib/sip"
krita.scripting:         "python3.5" "python3.5"
krita.scripting: Setting python paths: "/home/boud/.local/share/krita/:/tmp/.mount_krita-dYxIEy/usr/share/krita/:/home/boud/.local/share/krita/pykrita/:/tmp/.mount_krita-dYxIEy/usr/share/krita/pykrita/:/tmp/.mount_krita-dYxIEy/usr/share/pykrita/:/tmp/.mount_krita-dYxIEy/usr/lib/krita-python-libs:/tmp/.mount_krita-dYxIEy/usr/lib/sip:/tmp/.mount_krita-dYxIEy/usr/lib/python3.5/lib-dynload:/tmp/.mount_krita-dYxIEy/usr/lib/python3.5/site-packages:/tmp/.mount_krita-dYxIEy/usr/lib/python3.5/site-packages/PyQt5:/tmp/.mount_krita-dYxIEy/usr/lib/python3.5"
krita.scripting: Initializing Python interpreter
/tmp/.mount_krita-dYxIEy/usr/lib/krita-python-libs/krita added to PYTHONPATH
krita.scripting: Loaded pykrita, now load plugins
k
Comment 24 galileo.sartor 2018-06-20 13:02:39 UTC
It's still not loading the python3.5 folder.
I can't really tell what's wrong.
I haven't installed anything strange,
It's mostly stuff from the repos.
The system is mostly fresh.
Comment 25 TheAssassin 2018-06-20 16:22:41 UTC
The problem was a quite unreliable check in the Krita source code, which has just been fixed in https://phabricator.kde.org/R37:36ca3dd981e8ff1ad2aeff0dec02928e4a6cd5a3 (https://cgit.kde.org/krita.git/commit/?id=36ca3dd981e8ff1ad2aeff0dec02928e4a6cd5a3).
Comment 26 Andrey 2018-06-26 15:11:16 UTC
Git commit 04c2af2c09684cd1ec05bf087a45089f871d1f54 by Andrey Kamakin, on behalf of Boudewijn Rempt.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Fix setting the python environment

With linuxdeployqt, apparently something changed in the way
the mount point is created. Do a case-insensitive comparison
to make sure.
(cherry picked from commit ef9c27b5ad4d2ab18b173842bede1cc5d7464d89)

M  +1    -1    plugins/extensions/pykrita/plugin/utilities.cpp

https://commits.kde.org/krita/04c2af2c09684cd1ec05bf087a45089f871d1f54
Comment 27 Andrey 2018-06-26 15:12:55 UTC
Git commit d36a73f85dcfe6b655f094d289d6c7f1bc2f99b3 by Andrey Kamakin, on behalf of Boudewijn Rempt.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Cleanup the python path setting

This puts back the old way of setting the paths. I'm not sure
whether this will give a build error with python 2; if so, it
needs to be put between ifdefs, but I'm not sure which ifdefs
are available. In any case, this block of code is only relevant
for appimages, and since we're not providing python 2.7 appimages,
the code would't be executed by 2.7 using krita builds.

CCMAIL:jhoolmans@gmail.com

M  +2    -9    plugins/extensions/pykrita/plugin/utilities.cpp

https://commits.kde.org/krita/d36a73f85dcfe6b655f094d289d6c7f1bc2f99b3