Fix setting the python environment

With linuxdeployqt, apparently something changed in the way
the mount point is created. Do a case-insensitive comparison
to make sure.

BUG:395606